# rideco

./: .gitignore  Makefile  README.md  docker-compose.yml  hypercorn-config.toml  pyproject.toml  restate.toml
docs/: architecture.mmd
rideco/services/: app.py  dispatch.py  eta.py  features.py  locations.py  offers.py  pricing.py  region_safety_agent.py  safety_agent.py  sim_control.py  sim_driver.py  sim_mapping.py  sim_rider.py  trip.py
rideco/shared/: log.py  regions.py  types.py
rideco/sim/: _ingress.py  driver.py  mapping_events.py  rider.py  watch_regions.py
rideco/tui/: app.py  processes.py
scripts/: approve.sh  cancel-trip.sh  complete-trip.sh  demo-t1.sh  demo-t2.sh  escalate.sh  make-trip-send.sh  make-trip.sh  poison.sh  register-all.sh  register.sh  reset.sh  serve-all.sh  set-feature.sh  setup-region.sh  show-agent.sh  show-invocations.sh  show-region.sh  show-regions.sh  show-trip.sh  spike-region.sh  stop.sh  tui.sh  watch-regions.sh
