[project]
name = "rideco"
version = "0.1.0"
description = "RideCo — ride dispatch on Restate. A six-service demo of a fictional ride-hailing company built as a stateful application on the Restate platform."
requires-python = ">=3.11"
dependencies = [
  "restate_sdk[serde]>=0.7",
  "hypercorn>=0.16",
  "httpx>=0.27",
  "rich>=13.7",
  "textual>=0.50",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rideco*"]
